# multimodal-finrag

./: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: ci-status.md  deploy.md  health.md  query.md  test.md
.github/workflows/: ci.yml  deploy.yml
artifacts/: AWS_K8S_QNA.md  PROJECT_QNA.md  Q&A.md  QNA.md  interview.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
scripts/: build_index.py  deploy_lambda.py  train_lora.py
src/: __init__.py  config.py
src/api/: __init__.py  main.py  schemas.py
src/api/routes/: entities.py  ingest.py  query.py
src/api/static/: index.html
src/finetune/: __init__.py  dataset.py  inference.py  lora_trainer.py
src/ingestion/: __init__.py  chart_extractor.py  pdf_parser.py  s3_loader.py
src/lambda_handler/: Dockerfile  __init__.py  handler.py
src/rag/: __init__.py  bedrock_llm.py  embeddings.py  pipeline.py  retriever.py
tests/: __init__.py  test_lora_inference.py  test_pdf_parser.py  test_rag_pipeline.py
